--- a/Parcial/src/main/java/ar/edu/unlar/paradigmas3/parcial/ui/Principal.form
+++ b/Parcial/src/main/java/ar/edu/unlar/paradigmas3/parcial/ui/Principal.form
@@ -80,10 +80,10 @@
           <Properties>
             <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.editors2.TableModelEditor">
               <Table columnCount="4" rowCount="4">
-                <Column editable="true" title="Alumno" type="java.lang.Object"/>
-                <Column editable="true" title="Profesor" type="java.lang.Object"/>
-                <Column editable="true" title="Aula" type="java.lang.Object"/>
-                <Column editable="true" title="Curso" type="java.lang.Object"/>
+                <Column editable="true" title="Title 1" type="java.lang.Object"/>
+                <Column editable="true" title="Title 2" type="java.lang.Object"/>
+                <Column editable="true" title="Title 3" type="java.lang.Object"/>
+                <Column editable="true" title="Title 4" type="java.lang.Object"/>
               </Table>
             </Property>
           </Properties>
